fix: dropdown arrow overlapping  issue fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,3 +34,9 @@ input::file-selector-button {
     @apply block rounded py-2 pl-3 pr-4 text-gray-900 hover:bg-gray-100 dark:border-gray-700 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-blue-500;
   }
 }
+
+
+/* Fix dropdown arrow overlapping issue of datatable */
+.dataTables_length select {
+  padding-right: 1.5rem !important;
+}
